# src/infrastructure/repositories/prisma-user-repository.ts
@@ -23,10 +23,10 @@ export class PrismaUserRepository implements UserRepository {
           email: user.email,
           phone: user.phone,
           passwordHash: user.passwordHash,
-          country: user.country,
-          currency: user.currency,
-          firstName: user.firstName,
-          lastName: user.lastName,
+          ...(user.country && { country: user.country }),
+          ...(user.currency && { currency: user.currency }),
+          ...(user.firstName && { firstName: user.firstName }),
+          ...(user.lastName && { lastName: user.lastName }),
           isEmailVerified: user.isEmailVerified,
           isPhoneVerified: user.isPhoneVerified,
           isActive: user.isActive,
@@ -72,10 +72,10 @@ export class PrismaUserRepository implements UserRepository {
         email: user.email,
         phone: user.phone,
         passwordHash: user.passwordHash,
-        country: user.country,
-        currency: user.currency,
-        firstName: user.firstName,
-        lastName: user.lastName,
+        ...(user.country && { country: user.country }),
+        ...(user.currency && { currency: user.currency }),
+        ...(user.firstName && { firstName: user.firstName }),
+        ...(user.lastName && { lastName: user.lastName }),
         isEmailVerified: user.isEmailVerified,
         isPhoneVerified: user.isPhoneVerified,
         isActive: user.isActive,
